p3/confs/apps/wil-playground-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-playground
  namespace: dev
  labels:
    app.kubernetes.io/name: wil-playground
    app.kubernetes.io/instance: iot-project
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: traefik
  rules:
  - host: dev.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wil-playground
            port:
              number: 8888
